syntax = "proto3";

package org.tty.dailyset.dailyset_unic;

option java_multiple_files = true;
option java_package = "org.tty.dailyset.dailyset_unic.grpc";
option java_outer_classname = "TicketProto";

service TicketService {
    // bind ticket
    rpc bind(TicketBindRequest) returns (TicketBindResponse) {}
    // query ticket
    rpc query(TicketQueryRequest) returns (TicketQueryResponse) {}
    // unbind ticket.
    rpc unbind(TicketUnbindRequest) returns (TicketUnbindResponse) {}
}

message TicketBindRequest {
    string uid = 1;
    string password = 2;
}

message TicketQueryRequest {
    string ticketId = 1;
}

message TicketBindResponse {
    bool success = 1;
    Ticket ticket = 2;
}

message TicketQueryResponse {
    int32 code = 1;
    string message = 2;
    Ticket ticket = 3;
    StudentInfo studentInfo = 4;
}

message TicketUnbindRequest {
    string ticketId = 1;
}

message TicketUnbindResponse {
    bool success = 1;
}

message Ticket {
    reserved 3;

    string ticketId = 1;
    string uid = 2;
    enum TicketStatus {
        Initialized = 0;
        Checked = 1;
        Failure = 2;
        PasswordFailure = 3;
    }
    TicketStatus status = 4;
}

message StudentInfo {
    string uid = 1;
    string departmentName = 2;
    string className = 3;
    string name = 4;
    int32 grade = 5;
}
